--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.27.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@stream-io/node-sdk": "^0.5.1",
     "@stream-io/video-react-sdk": "^1.19.1",
@@ -18,8 +19,10 @@
     "convex": "^1.25.4",
     "lucide-react": "^0.532.0",
     "next": "15.4.4",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.5.2",
     "svix": "^1.69.0",
     "tailwind-merge": "^3.3.1"
   },
